Updated content Oct 2021

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -21,54 +21,92 @@
 <div id="page-wrapper">
 
     <!-- Header -->
-<header id="header">
-				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="../static/images/profile-pic.jpg" alt="" /></a>
-					<h1><strong>Kostadin Devedzhiev</strong> <br>
-					<i><h6>kostadin.devedzhiev@stonybrook.edu</h6></i>
-					<p>Computer Vision, NLP, ML, <br>Environmental Conservation </h1>
-				</div>
-			</header>
+    <header id="header">
+        <div class="inner">
+            <a href="index.html" class="image avatar"><img src="../static/images/profile-pic.jpg" alt=""/></a>
+            <h1><strong>Kostadin Devedzhiev</strong> <br>
+                <i><h6>kostadin.devedzhiev@stonybrook.edu</h6></i>
+                  <p>Language, Vision, Embedded AI </p></h1>
+        </div>
+    </header>
 
     <!-- Main -->
     <div id="main" class="wrapper style1">
         <div class="container">
-         
+
             <!-- Content -->
             <section>
-			<header class="major">
-							<h2>Curriculum Vitae</h2>
-                        
-                
-						</header>
+                <header class="major">
+                    <h2>Curriculum Vitae</h2>
+
+
+                </header>
                 <h3>Education</h3>
                 <p>
                 <div class=resume-row>
                     <div class="resume-column"><b>Stony Brook University</b>, <i>Stony Brook NY</i></div>
-                    <div class="resume-column"><span> Sep 2018 - Present</span></div>
+                    <div class="resume-column"><span> Sep 2018 - May 2022</span></div>
                 </div>
                 Bachelor of Science in Computer Science, Applied Mathematics & Statistics <br>
                 Computer Science Honors Program <br>
                 Specialization in Artificial Intelligence and Data Science <br>
-                GPA: 3.85/4.00
+                GPA: 3.88/4.00
                 </p>
                 <hr/>
 
                 <h3>Research and Work Experience</h3>
                 <p>
                 <div class=resume-row>
-                    <div class="resume-column"><b>Artificial Intelligence Research Assistant</b><br> <i>University of
-                        Hawaii Hilo, Hilo HI</i></div>
-                    <div class="resume-column"><span> Jun 2020 - Present</span></div>
+                    <div class="resume-column"><b>Natural Language Processing Research Assistant</b><br>
+                        <i>Stony Brook University, Stony Brook NY</i></div>
+                    <div class="resume-column"><span> Aug 2021 - Present</span></div>
                 </div>
                 <ul>
-                    <li>Researched and developed human-in-the-loop artificial intelligence for human-computer interaction.
+                    <li>Researching human-in-the-loop approaches for data collection and annotation.
+                    </li>
+                    <li>Developing a machine learning powered user interface for annotation.
+                    </li>
+                    <li>Created regular expressions for automatic parsing of Request for Comments (rfc) documents.</li>
+                    <li>Analyzed and evaluated the performance of a natural language parsing system.</li>
+
+
+                </ul>
+                </p>
+                <p>
+                <div class=resume-row>
+                    <div class="resume-column"><b>Radiology Research Assistant</b><br>
+                        <i>Stony Brook Medicine, Stony Brook NY</i></div>
+                    <div class="resume-column"><span> Mar 2021 - Present</span></div>
+                </div>
+                <ul>
+                    <li>Researched mini-beam radiation therapy for Alzheimer’s disease.
+                    </li>
+                    <li>In charge of data analysis on the cognitive testing and immunohistochemistry results.
+                    </li>
+                    <li>Set up cognitive testing for memory and learning using the Morris Water Maze.</li>
+                    <li>Responsible for the computation, medical imaging, and object tracking.
+                    </li>
+
+
+                </ul>
+                </p>
+                <p>
+                <div class=resume-row>
+                    <div class="resume-column"><b>Artificial Intelligence Research Assistant</b><br> <i>University of
+                        Hawaii Hilo, Hilo HI</i></div>
+                    <div class="resume-column"><span> Jun 2020 - Aug 2020</span></div>
+                </div>
+                <ul>
+                    <li>Researched and developed human-in-the-loop artificial intelligence for human-computer
+                        interaction.
                     </li>
                     <li>Trained a convolutional neural network with transfer learning and data augmentation.
                     </li>
                     <li>Developed a Bayesian algorithm for hyper-parameter tuning.</li>
-                    <li>Developed a multithreaded application that handles detection, classification, and user interactivity.</li>
-           
+                    <li>Built a multithreaded application that handles detection, classification, and user interaction
+                        in real-time.
+                    </li>
+
 
                 </ul>
                 </p>
@@ -81,7 +119,6 @@
                 <ul>
                     <li>Worked on a research project with holographic visualizations using a DseeLab holographic fan
                     </li>
-                    <li>Built an API that connects the holographic fan and the server using Java and Spring.
                     </li>
                     <li>Built an API that connects the holographic fan and the server using Java and Spring Boot.</li>
                     <li>Responsible for the setup and maintenance of computers and 3D printers in research labs.</li>
@@ -95,18 +132,19 @@
                 </div>
                 <ul>
                     <li>Worked on the frontend for a web app system using React.</li>
-                    <li>Located and fixed roots behind erroneous entries in a database for a transportation company.
+                    <li>Fixed bugs responsible for erroneous entries in a database for a transportation company.
                     </li>
                     <li>Practiced agile software development and worked collaboratively with different departments.</li>
                 </ul>
                 </p>
                 <hr/>
                 <h3>Teaching Experience</h3>
-				                <p>
+                <p>
                 <div class=resume-row>
-                    <div class="resume-column"><b>Applied Mathematics & Statistics Teching Assitant</b><br> <i>Stony Brook University, Stony Brook NY</i>
+                    <div class="resume-column"><b>Applied Mathematics & Statistics Teaching Assitant</b><br> <i>Stony
+                        Brook University, Stony Brook NY</i>
                     </div>
-                    <div class="resume-column"><span> Sep 2020 - Present</span></div>
+                    <div class="resume-column"><span> Sep 2020 - May 2021</span></div>
                 </div>
                 AMS 210: Applied Linear Algebra
                 </p>
@@ -137,7 +175,7 @@
                     </div>
                     <div class="resume-column"><span> May 2020 - Present</span></div>
                 </div>
-                Research & Development
+                Embedded Machine Learning Team Leader
                 </p>
                 <p>
                 <div class=resume-row>
@@ -188,7 +226,7 @@
 
                         </tr>
                         <tr>
-                            <td>Machine Learning </td>
+                            <td>Machine Learning</td>
                             <td>PyTorch, TensorFlow, Keras, SciKit-learn, Pandas</td>
                             <td>PyTorch</td>
                         </tr>
@@ -222,32 +260,36 @@
                         <div class="col-6 col-12-xsmall">
                             <h4>Computer Science</h4>
                             <ul class="alt">
-                                <li>Machine Learning </li>
-                                <li>Artificial Intelligence </li>
-								<li>Computer Vision </li>
-								<li>Natural Language Processing</li>
-                                <li>Data Science Fundamentals </li>
-								<li>Algorithm Analysis</li>
-                                <li>Data Structures </li>
-                                <li>Object Orientated Programming </li>
-                                <li>Software Development </li>
-								<li>Programming Abstractions </li>
+                                <li>Machine Learning</li>
+                                <li>Artificial Intelligence</li>
+                                <li>Computer Vision</li>
+                                <li>Natural Language Processing</li>
+                                <li>Data Science Fundamentals</li>
+                                <li>Algorithm Analysis</li>
+                                <li>Software Engineering</li>
+                                <li>Data Structures</li>
+                                <li>Computer Networks</li>
+                                <li>Object Orientated Programming</li>
+                                <li>Software Development</li>
+                                <li>Programming Abstractions</li>
                                 <li>Theory of Computation</li>
-                                <li>Systems Fundamentals I </li>
+                                <li>Systems Fundamentals I</li>
+                                <li>Ethics in Computer Science</li>
                             </ul>
 
                         </div>
                         <div class="col-6 col-12-xsmall">
                             <h4>Mathematics & Science</h4>
                             <ul class="alt">
-								<li>Statistics and Probability </li>
-								<li>Finite Mathematical Structures </li>
-                                <li>Numerical Analysis </li>
-                                <li>Applied Linear Algebra </li>
+                                <li>Big Data Networks and Algorithms</li>
+                                <li>Statistics and Probability</li>
+                                <li>Finite Mathematical Structures</li>
+                                <li>Numerical Analysis</li>
+                                <li>Applied Linear Algebra</li>
                                 <li>Calculus III with Applications</li>
                                 <li>Applied Calculus II</li>
                                 <li>Calculus I</li>
-								<li>Electricity and Magnetism with Lab</li>
+                                <li>Electricity and Magnetism with Lab</li>
                                 <li>Classical Mechanics with Lab</li>
                                 <li>General Chemistry II with Lab</li>
                                 <li>General Chemistry I with Lab</li>
@@ -255,7 +297,7 @@
                             </ul>
 
                         </div>
-                    
+
                     </div>
                 </section>
 
@@ -263,19 +305,21 @@
         </div>
     </div>
 
-	<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/kostadin-dev/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/KostadinDev" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>-->
-					</ul>
-					<ul class="copyright">
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <ul class="icons">
+                <li><a href="https://www.linkedin.com/in/kostadin-dev/" class="icon brands fa-linkedin"><span
+                        class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/KostadinDev" class="icon brands fa-github"><span
+                        class="label">Github</span></a></li>
+                <!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>-->
+            </ul>
+            <ul class="copyright">
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
 
 </div>
 
