--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
     <div class="inner">
         <a href="#" class="image avatar"><img src="../static/images/profile-pic.jpg" alt=""/></a>
         <h1><strong>Kostadin Devedzhiev</strong> <br>
-            <i><h6>kostadin.devedzhiev@stonybrook.edu</h6></i>
+            <i><h6>kostadin.g.devedzhiev@gmail.com</h6></i>
 
-            <p>Language, Vision, Embedded AI </p></h1>
+            <p>NLP for Human-Inspired AI </p></h1>
 
 
     </div>
