added transcript updated cv and profile photo and improved layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,13 +16,18 @@
 <!-- Header -->
 <header id="header">
     <div class="inner">
-        <a href="#" class="image avatar"><img src="../static/images/profile-pic.jpg" alt=""/></a>
-        <h1><strong>Kostadin Devedzhiev</strong> <br>
+        <a href="#" class="image avatar"><img src="../static/images/headshot.jpg" alt=""/></a>
+        <h1 style="text-align: center;">
+            <strong>Kostadin Devedzhiev</strong> <br>
             <i><h6>kostadin.g.devedzhiev@gmail.com</h6></i>
-
-            <p>NLP for Human-Inspired AI </p></h1>
-
-
+            <span>Software Engineer</span>
+            <br/>
+            <span>NLP for Human-Inspired AI </span>
+            <h6>
+                <a href="../static/documents/cv_2024.pdf">CV</a>,
+                <a href="../static/documents/sbu_transcript.pdf">transcript</a>
+            </h6>
+        </h1>
     </div>
 </header>
 
@@ -37,25 +42,14 @@
             <h2>Interests</h2>
         </header>
 
-        Hello, I am Kostadin. I am a senior computer science and applied mathematics student at Stony Brook University specializing in data science and artificial intelligence.
-        <br><br>
-        I am interested in the fundamental question of what intelligence is. As a data scientist, I approach the problem
-        from the point of view of mathematics and engineering.
-        <br><br>
-        As of now,
-        I lean to believe that anything humans can do can be achieved by machines. Thus, I build
-        different machine learning models to better study my hypothesis. However, it seems that computers need
-        some catching up, so I am particularly interested in human-in-the-loop artificial intelligence for natural
-        language
-        processing and computer vision.
-        <br><br>
-        Questions are welcome if you are interested in learning more about my research projects and their impact.
-        <br><br>
-        <ul class="actions">
-            <li><a href="resume.html" class="button">Web Resume</a> <a href="../static/documents/resume.pdf"
-                                                                       class="button">PDF
-                Resume</a></li>
-        </ul>
+        <span>
+            Software Engineer specializing in Natural Language Processing and User Interface Design, with a passion for developing intelligent interactive systems. Dedicated to creating human-inspired AI and enhancing human-machine interaction through language, speech, and innovative interfaces.
+        </span>
+<!--        <ul class="actions">-->
+<!--            <li><a href="resume.html" class="button">Web Resume</a> <a href="../static/documents/resume.pdf"-->
+<!--                                                                       class="button">PDF-->
+<!--                Resume</a></li>-->
+<!--        </ul>-->
 
         </header>
 
@@ -84,7 +78,7 @@
 
     <!-- Two -->
     <section id="two">
-        <h2>Recent Work</h2>
+        <h2>Projects</h2>
         <div class="row">
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/redistrict.png" class="image fit thumb"><img
@@ -94,7 +88,7 @@
                     I want to Redistrict is motivated to expose gerrymandering and to generate districting plans under
                     human supervision using the Census 2020 data.
                     The application is powered by the Stony Brook University SeaWulf supercomputer.</p>
-                <a><p>In Development</p></a>
+<!--                <a><p>In Development</p></a>-->
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/deep-gesture-table.png" class="image fit thumb"><img
@@ -111,7 +105,7 @@
                 <h3>Symbiotic Learning</h3>
                 <p>A human-in-the-loop tool for image annotation that utilizes state-of-art vision models in cohesion
                     with human judgement to detect and classify previously unseen data.</p>
-                <a><p>Not Available</p></a>
+<!--                <a><p>Not Available</p></a>-->
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/ellipses-white.png" class="image fit thumb"><img
@@ -521,9 +515,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                         class="label">Github</span></a></li>
                 <!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>-->
             </ul>
-            <ul class="copyright">
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
+<!--            <ul class="copyright">-->
+<!--                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>-->
+<!--            </ul>-->
         </div>
     </footer>
 
