changed deep gestures image and styled header

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,17 +18,17 @@
 <header id="header">
     <div class="inner">
         <a href="#" class="image avatar"><img src="../static/images/headshot.jpg" alt=""/></a>
-        <h1 style="text-align: center;">
-            <strong>Kostadin Devedzhiev</strong> <br>
-            <i><h6>kostadin.g.devedzhiev@gmail.com</h6></i>
-            <span>Software Engineer</span>
-            <br/>
+        <span style="text-align: center;">
+            <h1><strong>Kostadin Devedzhiev</strong> </h1>
+            <i><h5>kostadin.g.devedzhiev@gmail.com</h5></i>
+            <span>Software Engineer @ Stellar Cyber</span>
+            <br>
             <span>NLP for Human-Inspired AI </span>
             <h6>
-                <a href="../static/documents/cv_2024.pdf" target="_blank">CV</a>
+                <a href="../static/documents/cv_2024.pdf" target="_blank">CV</a>,
                 <a href="../static/documents/sbu_transcript.pdf" target="_blank">transcript</a>
             </h6>
-        </h1>
+        </span>
     </div>
 </header>
 
@@ -92,12 +92,12 @@
 <!--                <a><p>In Development</p></a>-->
             </article>
             <article class="col-6 col-12-xsmall work-item">
-                <a href="../static/images/deep-gesture-table.png" class="image fit thumb"><img
-                        src="../static/images/deep-gesture-table.png" alt=""/></a>
+                <a href="../static/images/deep-gestures-image.jpg" class="image fit thumb"><img
+                        src="../static/images/deep-gestures-image.jpg" alt=""/></a>
                 <h3>Deep Gestures</h3>
                 <p>A complete pipeline from data collection and preparation to model training, optimization, and
-                    deployment, designed to implement a gesture recognition CNN on an Arduino Nano 33 BLE
-                    Sense microcontroller.</p>
+                    deployment, designed to implement an optimized gesture recognition CNN on an Arduino Nano 33 BLE
+                    Sense microcontroller, utilizing its 3-axis accelerometer.</p>
                 <a href="https://github.com/KostadinDev/deep-gestures"><p>
                     https://github.com/KostadinDev/deep-gestures</p></a>
             </article>
