added new projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,34 @@
         <h2>Projects</h2>
         <div class="row">
             <article class="col-6 col-12-xsmall work-item">
+                <a href="../static/images/gonext-cover.jpg" class="image fit thumb"><img
+                        src="../static/images/gonext-cover.jpg" alt=""/></a>
+                <h3>Go Next </h3>
+                <p>
+                    A Generative AI assistant for League of Legends, designed to offer real-time,
+                    customized game strategies, matchups, synergies, and builds.
+                    It leverages the Riot API to fetch live game data,
+                    such as information on all allied and enemy players. Then, it feeds it to GPT-4o,
+                    providing players with context-specific guidance based on the current game state.
+                </p>
+                <a><p>In Development</p></a>
+            </article>
+            <article class="col-6 col-12-xsmall work-item">
+                <a href="../static/images/recursiveqa-cover.jpg" class="image fit thumb"><img
+                        src="../static/images/recursiveqa-cover.jpg" alt=""/></a>
+                <h3>Recursive QA</h3>
+                <p>
+                    Recursive QA is a NLP annotation framework that replaces
+                    traditional labeling methods with a question-answering approach.
+                    By leveraging the constituency parse tree of a sentence, it guides
+                    the annotator through selecting question-answer pairs.
+                    The system also integrates features
+                    like visualizations, user management, and history tracking to streamline annotation quality control.
+                </p>
+                <a href="https://github.com/KostadinDev/Recursive-QA"><p>
+                    github.com/KostadinDev/Recursive-QA</p></a>
+            </article>
+            <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/redistrict.png" class="image fit thumb"><img
                         src="../static/images/redistrict.png" alt=""/></a>
                 <h3>I Want to Redistrict</h3>
@@ -99,7 +127,7 @@
                     deployment, designed to implement an optimized gesture recognition CNN on an Arduino Nano 33 BLE
                     Sense microcontroller, utilizing its 3-axis accelerometer.</p>
                 <a href="https://github.com/KostadinDev/deep-gestures"><p>
-                    https://github.com/KostadinDev/deep-gestures</p></a>
+                    github.com/KostadinDev/deep-gestures</p></a>
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/interactive-annotator.png" class="image fit thumb"><img
@@ -521,6 +549,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                         class="label">LinkedIn</span></a></li>
                 <li><a href="https://github.com/KostadinDev" class="icon brands fa-github"><span
                         class="label">Github</span></a></li>
+                            <li><a href="https://open.spotify.com/user/4y1al16ad6q40hy0bm6xejks0?si=a22c66e820ea4ed8" class="icon brands alt fa-spotify"><span class="label">GitHub</span></a></li>
                 <!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>-->
             </ul>
 <!--            <ul class="copyright">-->
