update github links

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,8 @@
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/gonext-cover.jpg" class="image fit thumb"><img
                         src="../static/images/gonext-cover.jpg" alt=""/></a>
-                <h3>Go Next </h3>
+                <h3>GoNext &nbsp&nbsp<a href="https://github.com/KostadinDev/gonext" target="_blank"
+                                         class="icon brands fa-github"><span class="label">Github</span></a></h3>
                 <p>
                     A Generative AI assistant for League of Legends, designed to offer real-time,
                     customized game strategies, matchups, synergies, and builds.
@@ -92,22 +93,20 @@
                     such as information on all allied and enemy players. Then, it feeds it to GPT-4o,
                     providing players with context-specific guidance based on the current game state.
                 </p>
-                <a><p>In Development</p></a>
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/recursiveqa-cover.jpg" class="image fit thumb"><img
                         src="../static/images/recursiveqa-cover.jpg" alt=""/></a>
-                <h3>Recursive QA</h3>
+                <h3>Recursive QA &nbsp&nbsp<a href="https://github.com/KostadinDev/Recursive-QA" target="_blank"
+                                              class="icon brands fa-github"><span class="label">Github</span></a></h3>
                 <p>
-                    Recursive QA is a NLP annotation framework that replaces
+                    NLP annotation framework that replaces
                     traditional labeling methods with a question-answering approach.
                     By leveraging the constituency parse tree of a sentence, it guides
                     the annotator through selecting question-answer pairs.
                     The system also integrates features
                     like visualizations, user management, and history tracking to streamline annotation quality control.
                 </p>
-                <a href="https://github.com/KostadinDev/Recursive-QA"><p>
-                    github.com/KostadinDev/Recursive-QA</p></a>
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/redistrict.png" class="image fit thumb"><img
@@ -122,12 +121,11 @@
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/deep-gestures-image.jpg" class="image fit thumb"><img
                         src="../static/images/deep-gestures-image.jpg" alt=""/></a>
-                <h3>Deep Gestures</h3>
+                <h3>Deep Gestures  &nbsp&nbsp<a href="https://github.com/KostadinDev/deep-gestures" target="_blank"
+                                                class="icon brands fa-github"><span class="label">Github</span></a></h3>
                 <p>A complete pipeline from data collection and preparation to model training, optimization, and
                     deployment, designed to implement an optimized gesture recognition CNN on an Arduino Nano 33 BLE
                     Sense microcontroller, utilizing its 3-axis accelerometer.</p>
-                <a href="https://github.com/KostadinDev/deep-gestures"><p>
-                    github.com/KostadinDev/deep-gestures</p></a>
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/interactive-annotator.png" class="image fit thumb"><img
@@ -144,7 +142,8 @@
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/ellipses-white.png" class="image fit thumb"><img
                         src="../static/images/ellipses-white.png" alt=""/></a>
-                <h3>EMF in Ellipses</h3>
+                <h3>EMF in Ellipses  &nbsp&nbsp<a href="https://doi.org/10.1088/1361-6404/ABB066" target="_blank"
+                                                  class="icon fa-file"><span class="label">PDF</span></a></h3>
                 <p>A study of the motional EMF induced in ellipitical conducting loops traversed by a magnetic
                     field.</p>
                 <a href="https://doi.org/10.1088/1361-6404/ABB066"><p>P-M Binder, Kostadin G Devedzhiev,
