--- a/templates/index.html
+++ b/templates/index.html
@@ -87,11 +87,7 @@
                 <h3>GoNext &nbsp&nbsp<a href="https://github.com/KostadinDev/gonext" target="_blank"
                                          class="icon brands fa-github"><span class="label">Github</span></a></h3>
                 <p>
-                    A Generative AI assistant for League of Legends, designed to offer real-time,
-                    customized game strategies, matchups, synergies, and builds.
-                    It leverages the Riot API to fetch live game data,
-                    such as information on all allied and enemy players. Then, it feeds it to GPT-4o,
-                    providing players with context-specific guidance based on the current game state.
+                    A Generative AI assistant for League of Legends that delivers real-time, personalized strategies, matchups, synergies, and builds. By leveraging the Riot API, it retrieves live game data, including details on both allied and enemy players. This data is then is made available to GPT-4o to offer players context-specific guidance tailored to the current game state.
                 </p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
@@ -103,7 +99,7 @@
                     NLP annotation framework that replaces
                     traditional labeling methods with a question-answering approach.
                     By leveraging the constituency parse tree of a sentence, it guides
-                    the annotator through selecting question-answer pairs.
+                    the annotator through selecting from generated question-answer pairs.
                     The system also integrates features
                     like visualizations, user management, and history tracking to streamline annotation quality control.
                 </p>
@@ -112,11 +108,7 @@
                 <a href="../static/images/redistrict.png" class="image fit thumb"><img
                         src="../static/images/redistrict.png" alt=""/></a>
                 <h3>I Want to Redistrict</h3>
-                <p>I Want to Redistrict is a political science tool designed to create and explore state districting
-                    plans based on statistical measures. Its goal is to expose gerrymandering and generate districting
-                    plans with human oversight, using Census 2020 data. The application is powered by Stony Brook
-                    University's SeaWulf supercomputer.</p>
-<!--                <a><p>In Development</p></a>-->
+                <p>A political science tool designed to create and analyze state districting plans using statistical measures. Its primary goal is to expose gerrymandering and generate fair districting plans under human oversight, leveraging data from the 2020 Census. The application is powered by Stony Brook University's powerful SeaWulf supercomputer.</p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
                 <a href="../static/images/deep-gestures-image.jpg" class="image fit thumb"><img
