--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                 <h3>GoNext &nbsp&nbsp<a href="https://github.com/KostadinDev/gonext" target="_blank"
                                          class="icon brands fa-github"><span class="label">Github</span></a></h3>
                 <p>
-                    A Generative AI assistant for League of Legends that delivers real-time, personalized strategies, matchups, synergies, and builds. By leveraging the Riot API, it retrieves live game data, including details on both allied and enemy players. This data is then is made available to GPT-4o to offer players context-specific guidance tailored to the current game state.
+                    A GenAI-powered assistant for League of Legends that delivers real-time, personalized strategies, matchups, synergies, and builds. By leveraging the Riot API, it retrieves live game data, including details on both allied and enemy players. This data is then is made available to GPT-4o to offer players context-specific guidance tailored to the current game state.
                 </p>
             </article>
             <article class="col-6 col-12-xsmall work-item">
