--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             <br>
             <span>NLP for Human-Inspired AI </span>
             <h6>
-                <a href="../static/documents/cv_2024.pdf" target="_blank">CV</a>,
+                <a href="../static/documents/cv.pdf" target="_blank">CV</a>,
                 <a href="../static/documents/sbu_transcript.pdf" target="_blank">transcript</a>
             </h6>
         </span>
