updated resume and bio

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
         </header>
 
         <span>
-            Software Engineer specializing in Natural Language Processing and User Interface Design, with a passion for developing intelligent interactive systems. Dedicated to creating human-inspired AI and enhancing human-machine interaction through language, speech, and innovative interfaces.
+            Software Engineer specializing in Natural Language Processing and User Interface Design, with a passion for developing intelligent interactive systems. Dedicated to creating human-inspired AI and enhancing human-machine interaction through language, speech, vision, and innovative interfaces.
         </span>
 <!--        <ul class="actions">-->
 <!--            <li><a href="resume.html" class="button">Web Resume</a> <a href="../static/documents/resume.pdf"-->
